frontend/editor.css
/* ... */
pluto-output div.admonition {
    border-radius: 8px;
    margin-block-start: 1em;
    margin-block-end: 1em;
}
pluto-output div.admonition .admonition-title {
    font-family: "Vollkorn", sans-serif;
    font-feature-settings: "lnum", "pnum";
    color: white;
    font-weight: 600;
    margin-block-end: 0px;
    padding-left: 0.3em;
}
pluto-output div.admonition .admonition-title ~ * {
    margin-block-end: 0.5em;
    margin-block-start: 0.5em;
    padding-left: 0.5em;
    transition: filter linear 0.1s;
}

pluto-output div.admonition {
    background: rgba(68, 149, 28, 0.2);
    border: 5px solid rgb(158, 200, 137);
}
pluto-output div.admonition .admonition-title {
    background: rgb(158, 200, 137);
    margin: -1px; /* Fixes a rendering glitch in Chrome */
}
pluto-output div.admonition.note,
pluto-output div.admonition.info,
pluto-output div.admonition.hint {
    background: rgba(50, 115, 200, 0.2);
    border: 5px solid rgb(148, 182, 226);
}
pluto-output div.admonition.note .admonition-title,
pluto-output div.admonition.info .admonition-title,
pluto-output div.admonition.hint .admonition-title {
    background: rgb(148, 182, 226);
}
pluto-output div.admonition.warning {
    background: rgba(162, 148, 30, 0.2);
    border: 5px solid rgb(207, 199, 138);
}
pluto-output div.admonition.warning .admonition-title {
    background: rgb(207, 199, 138);
}
pluto-output div.admonition.danger {
    background: rgba(200, 67, 50, 0.2);
    border: 5px solid rgb(226, 157, 148);
}
pluto-output div.admonition.danger .admonition-title {
    background: rgb(226, 157, 148);
}

pluto-output div.admonition.hint .admonition-title ~ * {
    filter: blur(0.25em);
}
pluto-output div.admonition.hint:hover .admonition-title ~ *,
pluto-output div.admonition.hint:focus-within .admonition-title ~ * {
    filter: blur(0em);
}

pluto-output div.footnote {
    margin-block-start: 1em;
    margin-block-end: 1em;
}

pluto-output div.footnote p.footnote-title::before {
    content: "[";
}
pluto-output div.footnote p.footnote-title::after {
    content: "]: ";
}
pluto-output a.footnote,
pluto-output div.footnote p.footnote-title {
    font-family: "Roboto Mono", monospace;
    font-size: 0.75rem;
    font-weight: 700;
    margin-block-end: 0px;
    letter-spacing: -0.05em;
    /* font-variant: small-caps; */
}

pluto-output div.footnote p.footnote-title ~ * {
    margin-left: 0.1em;
    padding-left: 0.4em;
    border-left: 5px solid rgba(23, 115, 119, 0.15);
    padding-bottom: var(--pluto-cell-spacing);
    margin-block-end: 0px;
}
pluto-output div.footnote p:last-child {
    padding-bottom: 0px;
}

pluto-output.scroll_y {
    max-height: 80vh;
    max-height: 400px;
    overflow: auto;
}

pluto-output table {
    border-collapse: collapse;
    border: 2px solid rgba(0, 0, 0, 0.2);
    border-left: none;
    border-right: none;
    margin: 0 auto;
    margin-block-start: var(--pluto-cell-spacing);
    margin-block-end: var(--pluto-cell-spacing);
}

pluto-output table > thead {
    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
}

pluto-output table > tbody td {
    font-family: JuliaMono, monospace;
    font-size: 0.75rem;
    font-variant-ligatures: none;
}
pluto-output table > tbody td code {
    font-size: 0.75rem;
}

pluto-output table td,
pluto-output table th {
    padding: 0.2rem 0.5rem;
}

pluto-output table > tbody tr:hover {
    background-color: rgba(224, 203, 158, 0.15);
}
pluto-output table pre {
    white-space: pre;
}

pluto-output kbd,
kbd {
    font-family: "Space Mono", monospace;
    font-size: 0.7rem;
    letter-spacing: -0.7px;
    border: 1px solid #dfdfdf;
    padding: 0px 2px;
    border-radius: 3px;
}

/* HEADER */

body > header {
    /* position: absolute;
    top: 0px; */
    width: 100%;
    min-height: 60px;

    z-index: 50;
    background-color: white;
    transform: translateY(0px);
    transition: background-color 0.5s ease-in-out, transform 0.25s cubic-bezier(0.18, 0.89, 0.49, 1.13);
    border-bottom: solid 1px rgba(0, 0, 0, 0.1);

    font-family: "Roboto Mono", monospace;
    font-weight: 400;
    font-size: 0.75rem;
}

body > header.show_export {
    position: sticky;
    top: 0;
    transform: translateY(130px);
}

aside#export {
    position: absolute;
    top: 0;
    width: 100%;
    height: 130px;
    background: rgb(60, 67, 101);
    color: rgba(255, 255, 255, 0.7);
    transform: translateY(-101%);
}
aside#export::before {
    content: "";
    position: absolute;
    bottom: 100%;
    left: 0;
    right: 0;
    height: 100px;
    background: inherit;
}
aside#export div#container {
    flex-direction: row;
    display: flex;
    max-width: 1000px;
    padding-right: 20px;
    margin: 0 auto;
}
header aside#export div#container {
    /* to prevent the div from taking up horizontal page when the export pane is closed. On small screen this causes overscroll on the right. */
    overflow-x: hidden;
}
header.show_export aside#export div#container {
    overflow-x: auto;
}
a.export_card {
    margin: 20px 5px;
    flex: 0 0 auto;
    width: 160px;
    height: 90px;

    border: 5px solid transparent;
    background: rgba(255, 255, 255, 0.8);
    border-radius: 8px;
    color: rgba(0, 0, 0, 0.7);
    box-shadow: 0px 2px 10px #00000029;
    text-decoration: none;
}
div.export_title {
    height: 90px;
    flex: 0 0 auto;
    border-radius: 8px;
    text-orientation: sideways-right;
    /* Not supported by Chrome: */
    /* writing-mode: sideways-lr; */
    writing-mode: vertical-lr;
    transform: rotate(180deg);

    margin-top: 10px;
    font-weight: 700;
    font-size: 1rem;
}
a.export_card header {
    margin-block: 0px;
    font-family: "Vollkorn", sans;
    font-feature-settings: "lnum", "pnum";
    font-size: 1rem;
}
a.export_card section {
    color: rgba(0, 0, 0, 0.5);
    font-weight: 500;
}
aside#export button.toggle_export {
    margin-left: auto;
    height: 60px;
}
body.static_preview button.toggle_export {
    display: none;
}
/* ... */

